--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="メール管理">
   <!-- 仮のアプリアイコン（お好きな画像に変更できます） -->
-  <link rel="apple-touch-icon" href="https://via.placeholder.com/180/0f172a/ffffff?text=Mail">
+  <link rel="apple-touch-icon" href="icon-green.png">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
