--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <!-- iOSアプリ化のためのビューポート設定（ズーム禁止、セーフエリア対応） -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>メールテンプレート管理アプリ</title>
   
-  <!-- iPhoneホーム画面に追加した際のアプリアイコン・フルスクリーン設定 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="メール管理">
-  <!-- 仮のアプリアイコン（お好きな画像に変更できます） -->
   <link rel="apple-touch-icon" href="icon-green.png">
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -101,193 +98,49 @@
         title: '資料請求へのお礼（即レス用）',
         category: 'initial',
         subject: '【資料送付のご案内】株式会社リード・リアルエステート札幌支店 担当の三宮（さんのみや）です',
-        body: `〇〇株式会社
-〇〇様
-
-お世話になっております。
-株式会社リード・リアルエステート札幌支店の三宮（さんのみや）でございます。
-
-この度は、弊社サービスの資料をご請求いただき、
-誠にありがとうございます。
-
-早速ではございますが、資料（PDF）をお送りいたします。
-添付ファイルをご確認いただけますでしょうか。
-
-＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-■添付資料
-・会社概要.pdf
-・サービス紹介資料.pdf
-・導入事例集.pdf
-＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-
-貴社の課題解決の一助となれば幸いです。
-
-ご不明点や、「まずは話を聞いてみたい」というご要望がございましたら、
-本メールへの返信、または下記電話番号までお気軽にご連絡ください。
-
-引き続き何卒よろしくお願い申し上げます。`
+        body: `〇〇株式会社\n〇〇様\n\nお世話になっております。\n株式会社リード・リアルエステート札幌支店の三宮（さんのみや）でございます。\n\nこの度は、弊社サービスの資料をご請求いただき、\n誠にありがとうございます。\n\n早速ではございますが、資料（PDF）をお送りいたします。\n添付ファイルをご確認いただけますでしょうか。\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n■添付資料\n・会社概要.pdf\n・サービス紹介資料.pdf\n・導入事例集.pdf\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n貴社の課題解決の一助となれば幸いです。\n\nご不明点や、「まずは話を聞いてみたい」というご要望がございましたら、\n本メールへの返信、または下記電話番号までお気軽にご連絡ください。\n\n引き続き何卒よろしくお願い申し上げます。`
       },
       {
         id: 2,
         title: '日程調整の打診（初回）',
         category: 'initial',
         subject: '【お打ち合わせのご相談】株式会社リード・リアルエステート札幌支店',
-        body: `〇〇株式会社
-〇〇様
-
-お世話になっております。
-株式会社リード・リアルエステート札幌支店の三宮（さんのみや）でございます。
-
-先ほどは資料をご覧いただきありがとうございました。
-もしよろしければ、貴社の現状や課題感に合わせて
-より具体的な事例やデモンストレーションをご紹介できればと考えております。
-
-つきましては、20分～30分ほどオンラインにて
-情報交換のお時間をいただけないでしょうか。
-
-以下の日程でご都合はいかがでしょうか。
-
-■候補日時
-・〇月〇日（曜） 10:00～18:00
-・〇月〇日（曜） 13:00～16:00
-・〇月〇日（曜） 10:00～12:00
-
-上記以外をご希望の場合は、〇〇様のご都合の良い日時を
-いくつかいただけますと幸いです。
-
-ご検討のほど、よろしくお願い申し上げます。`
+        body: `〇〇株式会社\n〇〇様\n\nお世話になっております。\n株式会社リード・リアルエステート札幌支店の三宮（さんのみや）でございます。\n\n先ほどは資料をご覧いただきありがとうございました。\nもしよろしければ、貴社の現状や課題感に合わせて\nより具体的な事例やデモンストレーションをご紹介できればと考えております。\n\nつきましては、20分～30分ほどオンラインにて\n情報交換のお時間をいただけないでしょうか。\n\n以下の日程でご都合はいかがでしょうか。\n\n■候補日時\n・〇月〇日（曜） 10:00～18:00\n・〇月〇日（曜） 13:00～16:00\n・〇月〇日（曜） 10:00～12:00\n\n上記以外をご希望の場合は、〇〇様のご都合の良い日時を\nいくつかいただけますと幸いです。\n\nご検討のほど、よろしくお願い申し上げます。`
       },
       {
         id: 3,
         title: '検討状況の確認（1週間後）',
         category: 'followup',
         subject: '先日お送りした資料につきまして【株式会社リード・リアルエステート札幌支店】',
-        body: `〇〇株式会社
-〇〇様
-
-お世話になっております。
-株式会社リード・リアルエステート札幌支店の三宮です。
-
-先日お送りいたしました資料はご覧いただけましたでしょうか。
-
-もしご不明な点や、
-「もっとここを詳しく知りたい」といった箇所がございましたら、
-担当の私までお気軽にお申し付けください。
-
-また、同業他社様での導入事例などをまとめた
-追加資料もご用意が可能でございます。
-
-ご興味がございましたら、ぜひ一度情報提供の機会をいただけますと幸いです。
-
-お手すきの際にご返信いただけますと幸いです。
-よろしくお願いいたします。`
+        body: `〇〇株式会社\n〇〇様\n\nお世話になっております。\n株式会社リード・リアルエステート札幌支店の三宮です。\n\n先日お送りいたしました資料はご覧いただけましたでしょうか。\n\nもしご不明な点や、\n「もっとここを詳しく知りたい」といった箇所がございましたら、\n担当の私までお気軽にお申し付けください。\n\nまた、同業他社様での導入事例などをまとめた\n追加資料もご用意が可能でございます。\n\nご興味がございましたら、ぜひ一度情報提供の機会をいただけますと幸いです。\n\nお手すきの際にご返信いただけますと幸いです。\nよろしくお願いいたします。`
       },
       {
         id: 4,
         title: '音信不通時の再連絡（クッション）',
         category: 'followup',
         subject: '【再送】ご検討状況はいかがでしょうか',
-        body: `〇〇株式会社
-〇〇様
-
-いつも大変お世話になっております。
-株式会社リード・リアルエステート札幌支店の三宮です。
-
-度々のご連絡となり大変恐縮でございます。
-
-以前ご提案させていただきました件につきまして、
-その後、社内でのご検討状況はいかがでしょうか。
-
-ご多忙中とは存じますが、
-現状について一言だけでもご教示いただけますと幸いです。
-（「時期尚早」「他社に決定」等でも構いません）
-
-何卒よろしくお願い申し上げます。`
+        body: `〇〇株式会社\n〇〇様\n\nいつも大変お世話になっております。\n株式会社リード・リアルエステート札幌支店の三宮です。\n\n度々のご連絡となり大変恐縮でございます。\n\n以前ご提案させていただきました件につきまして、\nその後、社内でのご検討状況はいかがでしょうか。\n\nご多忙中とは存じますが、\n現状について一言だけでもご教示いただけますと幸いです。\n（「時期尚早」「他社に決定」等でも構いません）\n\n何卒よろしくお願い申し上げます。`
       },
       {
         id: 5,
         title: '半年後の掘り起こし（新機能・事例）',
         category: 'reengage',
         subject: '【新機能のご案内】貴社の課題解決に役立つ機能が追加されました',
-        body: `〇〇株式会社
-〇〇様
-
-大変ご無沙汰しております。
-株式会社リード・リアルエステート札幌支店の三宮でございます。
-
-以前は弊社サービスをご検討いただき、誠にありがとうございました。
-
-この度、以前〇〇様が懸念されていた点を解消できる
-「新機能」がリリースされましたので、
-改めてご案内させていただきたくご連絡いたしました。
-
-▼新機能のお知らせ
-（URLや詳細を記載）
-
-現在の貴社の状況に合わせて、
-改めてお役に立てるご提案ができるかと存じます。
-
-もしよろしければ、最新の資料をお送りするか、
-一度近況をお伺いできればと考えております。
-
-ご興味をお持ちいただけましたら、
-本メールへご返信いただけますと幸いです。
-
-季節の変わり目ですので、ご自愛くださいませ。`
+        body: `〇〇株式会社\n〇〇様\n\n大変ご無沙汰しております。\n株式会社リード・リアルエステート札幌支店の三宮でございます。\n\n以前は弊社サービスをご検討いただき、誠にありがとうございました。\n\nこの度、以前〇〇様が懸念されていた点を解消できる\n「新機能」がリリースされましたので、\n改めてご案内させていただきたくご連絡いたしました。\n\n▼新機能のお知らせ\n（URLや詳細を記載）\n\n現在の貴社の状況に合わせて、\n改めてお役に立てるご提案ができるかと存じます。\n\nもしよろしければ、最新の資料をお送りするか、\n一度近況をお伺いできればと考えております。\n\nご興味をお持ちいただけましたら、\n本メールへご返信いただけますと幸いです。\n\n季節の変わり目ですので、ご自愛くださいませ。`
       },
       {
         id: 6,
         title: '【SMS用】所在地不明・電話不通時',
         category: 'satei_initial',
         subject: '（SMS用のため件名不要）',
-        body: `【［媒体名］不動産査定の件】
-［お客様名］様
-
-株式会社リード・リアルエステート札幌支店の三宮平（さんのみや）です。
-
-先ほど、携帯番号［070-4485-9305］よりお電話差し上げました。
-お仕事中でしたでしょうか、失礼いたしました。
-
-［物件のエリア・種別］に関しまして、正確な所在地などの査定に必要なご情報が不足しておりましたので、ご確認させていただきたく存じます。
-
-お手すきの際に、こちらの携帯（またはSMS）へ折り返しいただけますと幸いです。
-
-お電話でのご対応が難しい場合は、その旨をご返信くださいませ。
-
-担当:三宮(070-4485-9305)`
+        body: `【［媒体名］不動産査定の件】\n［お客様名］様\n\n株式会社リード・リアルエステート札幌支店の三宮平（さんのみや）です。\n\n先ほど、携帯番号［070-4485-9305］よりお電話差し上げました。\nお仕事中でしたでしょうか、失礼いたしました。\n\n［物件のエリア・種別］に関しまして、正確な所在地などの査定に必要なご情報が不足しておりましたので、ご確認させていただきたく存じます。\n\nお手すきの際に、こちらの携帯（またはSMS）へ折り返しいただけますと幸いです。\n\nお電話でのご対応が難しい場合は、その旨をご返信くださいませ。\n\n担当:三宮(070-4485-9305)`
       },
       {
         id: 8,
         title: '机上査定報告書の送付（Eメール）',
         category: 'satei_initial',
         subject: '【机上査定報告書のご送付】株式会社リード・リアルエステート札幌支店 担当：三宮',
-        body: `〇〇 様
-
-突然のご連絡にて失礼いたします。
-株式会社リード・リアルエステート 札幌支店の三宮（さんのみや）と申します。
-
-この度は、不動産一括査定サイト「［媒体名］」を通じて、 
-ご所有不動産の査定をご依頼いただき、誠にありがとうございます。
-
-【査定物件】 ［査定物件の住所］
-
-［媒体名］運営のオペレーター様を通じて、 
-「［お客様のご事情1］」
-「［お客様のご事情2］」 
-というご事情を承りました。
-
-机上査定にはなりますが、下記3点の資料データを添付いたしますので、
-ご査収いただきますようお願いいたします。
-
-〇査定報告書
-〇調査レポートおよび調査資料
-〇成約事例／近隣販売在庫
-
-お手数をおかけいたしますが、メールをご確認できた場合、
-その旨のご返信をいただきたく存じます。
-データ添付ですと、迷惑メールに入ってしまっている場合があります。
-
-何卒、よろしくお願いいたします。`
+        body: `〇〇 様\n\n突然のご連絡にて失礼いたします。\n株式会社リード・リアルエステート 札幌支店の三宮（さんのみや）と申します。\n\nこの度は、不動産一括査定サイト「［媒体名］」を通じて、 \nご所有不動産の査定をご依頼いただき、誠にありがとうございます。\n\n【査定物件】 ［査定物件の住所］\n\n［媒体名］運営のオペレーター様を通じて、 \n「［お客様のご事情1］」\n「［お客様のご事情2］」 \nというご事情を承りました。\n\n机上査定にはなりますが、下記3点の資料データを添付いたしますので、\nご査収いただきますようお願いいたします。\n\n〇査定報告書\n〇調査レポートおよび調査資料\n〇成約事例／近隣販売在庫\n\nお手数をおかけいたしますが、メールをご確認できた場合、\nその旨のご返信をいただきたく存じます。\nデータ添付ですと、迷惑メールに入ってしまっている場合があります。\n\n何卒、よろしくお願いいたします。`
       }
     ];
 
